[package]
name = "passauf"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3", optional = true }
serialport = { version = "4.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bitflags = { version = "2.8", optional = true }
simplelog = { version = "0.12", features = ["paris"] }
strum = { version = "0.26", features = ["derive"] }
asn1 = { version = "0.20", optional = true }
rand = "0.9"
# these are pending cipher/digest release
retail-mac = "0.1.0"
sha1 = "0.11.0-pre.4"
des = "0.9.0-pre.2"
cbc = { version = "0.2.0-pre.2", features = ["alloc"] }
# end of packages pending cipher/digest release
iso7816-tlv = "0.4.4"
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
# to make development easier, all features are on by default. this will change later.
default = ["proxmark", "pcsc", "cli", "pace"]
# Proxmark support
proxmark = ["dep:serialport", "dep:serde", "serde/derive", "dep:bincode", "dep:bitflags"]
# PCSC support. Empty for now.
pcsc = []
# cli tool inclusion
cli = ["dep:clap", "clap/derive"]
# PACE support. Empty for now but we'll surely need some libs for it, right?
pace = ["dep:asn1"]

[patch.crates-io]
retail-mac = { git = 'https://github.com/RustCrypto/MACs.git' }
# inout = { path = "/tmp/utils/inout" }
# cbc = { path = "/tmp/block-modes/cbc" }
# des = { path = "/tmp/block-ciphers/des" }
